--- a/api/Dockerfile.prod
+++ b/api/Dockerfile.prod
@@ -2,22 +2,17 @@
 # BUILDER #
 ###########
 
-# pull official base image
 FROM python:3.8-alpine as builder
 
-# set work directory
 WORKDIR /usr/src/app
 
-# set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# install psycopg2 dependencies
 RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev libffi-dev
 
 RUN pip install --upgrade pip
 
-# install dependencies
 COPY ./requirements.txt .
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
 
@@ -26,25 +21,19 @@ RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requir
 # FINAL #
 #########
 
-# pull official base image
 FROM python:3.8-alpine
 
-# create directory for the app user
-ENV HOME=/opt/api
+ENV HOME=/opt/tochka-api
 RUN mkdir -p $HOME
 
-# create the appropriate directories
 WORKDIR $HOME
 RUN mkdir $HOME/staticfiles
 
-# install dependencies
 RUN apk update && apk add libpq
 COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
 RUN pip install --no-cache /wheels/*
 
-# copy project
 COPY . $HOME
 
-# run entrypoint.prod.sh
-ENTRYPOINT ["sh", "/opt/api/entrypoint.prod.sh"] 
+ENTRYPOINT ["sh", "entrypoint.prod.sh"] 
