Env файлы для dev и prod версий проекта, убран celery beat из compose файлов

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,11 +4,7 @@ services:
     rmq:
         build: ./rmq
         env_file: 
-            - .env
-        environment: 
-            - RABBITMQ_DEFAULT_VHOST=${RABBITMQ_DEFAULT_VHOST}
-            - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}
-            - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
+            - .env.prod
         volumes:
             - log_data:/var/log/rmq/
         restart: on-failure:3
@@ -23,6 +19,7 @@ services:
             - postgres_data:/var/lib/postgresql/data/
             - log_data:/var/log/postgresql
         restart: on-failure:3
+
     api:
         build:
             context: ./api
@@ -31,67 +28,40 @@ services:
         environment: 
             - DJANGO_SETTINGS_MODULE=config.settings_prod
         env_file:
-            - .env
+            - .env.prod
         depends_on: 
             - rmq
             - postgres_db
         volumes: 
             - log_data:/var/log/api
-            - static_volume:/home/app/web/staticfiles
+            - static_volume:/opt/api/staticfiles
+        restart: on-failure:3
+
     nginx:
         build: ./nginx
         ports:
             - 80:80
-        # volumes:
-        #     - static_volume:/home/app/web/staticfiles
+        volumes:
+            - static_volume:/opt/api/staticfiles
         depends_on:
             - api
         restart: on-failure:3
+
     celery:
         build:
             context: ./api
             dockerfile: Dockerfile.prod
         command: celery -A config worker -l warning -f /var/log/celery/celery.log
+        environment: 
+            - DJANGO_SETTINGS_MODULE=config.settings_prod
         env_file: 
-            - .env
+            - .env.prod
         restart: on-failure:3
         depends_on: 
             - api
             - rmq
         volumes: 
             - log_data:/var/log/celery
-    celery-beat:
-        build:
-            context: ./api
-            dockerfile: Dockerfile.prod
-        command: celery -A config beat -l info
-        env_file:
-            - .env
-        volumes: 
-            - log_data:/var/log/celery
-        # volumes:
-        #     - static_volume:/home/app/web/staticfiles
-        depends_on:
-            - postgres_db
-            - rmq
-        restart: on-failure:3
-
-    # pgbouncer:
-    #     image: pgbouncer/pgbouncer
-    #     restart: on-failure:3
-    #     environment: 
-    #         - DATABASES_HOST=postgres_db
-    #         - DATABASES_DBNAME=${SQL_DB_NAME}
-    #         - DATABASES_USER=${SQL_DB_USER}
-    #         - DATABASES_PASSWORD=${SQL_DB_PASSWORD}
-    #         - PGBOUNCER_AUTH_FILE=/etc/pgbouncer/userlist/userlist.txt
-    #         - PGBOUNCER_ADMIN_USERS=${SQL_DB_USER}
-    #         - PGBOUNCER_POOL_MODE=transaction
-    #         - PGBOUNCER_AUTH_TYPE=md5
-    #     volumes:
-    #         - ./pgbouncer:/etc/pgbouncer/userlist:ro
-    #     depends_on: 
-    #         - postgres_db
 
 volumes: 
     postgres_data:
