--- a/.env
+++ b/.env
@@ -1,8 +1,15 @@
+# DB settings
 SQL_DB_NAME=tochka_db
 SQL_DB_USER=tochka_user
 SQL_DB_PASSWORD=tochka_password
 SQL_DB_HOST=postgres_db
 SQL_DB_PORT=5432
+
+# RabbitMQ settings
 RABBITMQ_DEFAULT_VHOST=tochka
+
+# Database type
 DATABASE=postgres
+
+# Settings file for Django
 DJANGO_SETTINGS_MODULE=config.settings
