--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location /static/ {
-        alias /opt/api/staticfiles/;
+        alias /opt/tochka-api/staticfiles/;
     }
 
 } 
